--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -39,6 +39,7 @@
     "\n",
     "arr = [input().split() for _ in range(10)]\n",
     "dp = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
+    "dp_new = [[[0, i, j, False] for j in range(len(arr[0]))] for i in range(10)]\n",
     "\n",
     "for row in arr:\n",
     "    print(row)\n",
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -390,18 +391,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(10):\n",
-    "    for j in range(len(dp_new[0])):\n",
-    "        print(dp_new[i][j][0], end=\" \")\n",
-    "    print()"
-   ]
   },
   {
    "cell_type": "code",
@@ -583,22 +572,158 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 1 1 1 1 1 1 1 \n",
+      "1 2 2 2 2 2 2 2 2 2 \n",
+      "1 2 3 3 3 3 3 3 3 3 \n",
+      "1 2 3 4 4 4 4 4 4 4 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 1 1 1 1 1 1 1 1 \n",
+      "1 2 2 2 2 2 2 2 2 2 \n",
+      "1 2 3 3 3 3 3 3 3 3 \n",
+      "1 2 3 4 4 4 4 4 4 4 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n",
+      "1 2 3 4 5 5 5 5 5 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "size = 5\n",
     "box_dict = {}\n",
     "\n",
-    "while size >=1:\n",
+    "while size >=2:\n",
     "    for i in range(10):\n",
     "        for j in range(len(dp[0])):\n",
-    "            sum = 0            \n",
+    "            sum = 0\n",
+    "            tf_chk = []            \n",
     "            if dp[i][j][0] == size:                \n",
     "                for k in range(size-1, -1, -1):\n",
     "                    for l in range(size-1, -1, -1):\n",
     "                        if not dp[i-k][j-k][3]:\n",
-    "                            sum += 1 \n",
+    "                            sum += 1\n",
+    "                            if not(k==0 and l==0):\n",
+    "                                tf_chk.append(dp[i-k][j-l][3]) \n",
     "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
-    "                    #print()            \n",
-    "                               \n",
+    "                    #print()\n",
+    "            if not any(tf_chk):\n",
+    "                dp[i][j][3] = True\n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not(k==0 and l==0):\n",
+    "                            dp[i-k][j-l][0] = 0\n",
+    "            else:\n",
+    "                dp[i][j][0] -= 1\n",
+    "\n",
+    "                        \n",
+    "                        \n",
+    "                        \n",
+    "            \"\"\"                   \n",
     "            if sum == size ** 2:\n",
     "                if size not in box_dict.keys():\n",
     "                    box_dict[size] = 1\n",
@@ -611,9 +736,48 @@
     "                        for l in range(size-1, -1, -1):\n",
     "                            dp[i-k][j-l][3] = True                            \n",
     "                            if not(k==0 and l==0) :                      \n",
-    "                                dp[i-k][j-l][0] = 0              \n",
+    "                                dp[i-k][j-l][0] = 0\n",
+    "            \"\"\"             \n",
     "                                        \n",
     "    size -= 1            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = 0\n",
+    "if any([x <= 5 for x in box_dict.values()]):\n",
+    "    for i in range(len(dp)):\n",
+    "        for j in range(len(dp[i])):\n",
+    "            if dp[i][j][0] != 0:\n",
+    "                sum += 1\n",
+    "elif not box_dict:\n",
+    "    sum = 0\n",
+    "else:\n",
+    "    sum = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not any([False, False, False])"
    ]
   }
  ],
