--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,25 +711,26 @@
     "                                tf_chk.append(dp[i-k][j-l][3]) \n",
     "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
     "                    #print()\n",
-    "            if not any(tf_chk):\n",
-    "                dp[i][j][3] = True\n",
-    "                for k in range(size-1, -1, -1):\n",
-    "                    for l in range(size-1, -1, -1):\n",
-    "                        if not(k==0 and l==0):\n",
-    "                            dp[i-k][j-l][0] = 0\n",
-    "            else:\n",
-    "                dp[i][j][0] -= 1\n",
+    "                if not any(tf_chk):\n",
+    "                    dp[i][j][3] = True\n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            if not(k==0 and l==0):\n",
+    "                                dp[i-k][j-l][0] = 0\n",
+    "                else:\n",
+    "                    dp[i][j][0] -= 1\n",
     "\n",
     "                        \n",
     "                        \n",
     "                        \n",
-    "            \"\"\"                   \n",
+    "                               \n",
     "            if sum == size ** 2:\n",
     "                if size not in box_dict.keys():\n",
     "                    box_dict[size] = 1\n",
     "                else:\n",
     "                    box_dict[size] += 1\n",
     "                \n",
+    "                \"\"\"BrokenPipeError\n",
     "                if box_dict[size] <= 5:                    \n",
     "                    #print(f\"sum : {sum}, i : {i},  j :{j}\")                \n",
     "                    for k in range(size-1, -1, -1):\n",
@@ -737,7 +738,8 @@
     "                            dp[i-k][j-l][3] = True                            \n",
     "                            if not(k==0 and l==0) :                      \n",
     "                                dp[i-k][j-l][0] = 0\n",
-    "            \"\"\"             \n",
+    "                \"\"\"\n",
+    "                         \n",
     "                                        \n",
     "    size -= 1            "
    ]
