--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -632,23 +632,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 1 1 1 1 1 1 1 1 \n",
-      "1 2 2 2 2 2 2 2 2 2 \n",
-      "1 2 3 3 3 3 3 3 3 3 \n",
-      "1 2 3 4 4 4 4 4 4 4 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n"
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 5 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n"
      ]
     }
    ],
@@ -658,6 +658,20 @@
     "        print(dp_new[i][j][0], end=\" \")\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2297,10 +2311,10 @@
     "        for j in range(len(dp[0])):\n",
     "            sum = 0\n",
     "            tf_chk = []            \n",
-    "            if dp[i][j][0] == size:                \n",
+    "            if dp_new[i][j][0] == size:                \n",
     "                for k in range(size-1, -1, -1):\n",
     "                    for l in range(size-1, -1, -1):\n",
-    "                        if not dp[i-k][j-k][3]:\n",
+    "                        if not dp_new[i-k][j-k][3]:\n",
     "                            sum += 1\n",
     "                            if not(k==0 and l==0):\n",
     "                                tf_chk.append(dp[i-k][j-l][3])\n",
