--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -661,20 +661,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
    "outputs": [
@@ -2318,18 +2304,18 @@
     "                            sum += 1\n",
     "                            if not(k==0 and l==0):\n",
     "                                tf_chk.append(dp[i-k][j-l][3])\n",
-    "                                print(tf_chk)\n",
-    "                                print() \n",
+    "                                #print(tf_chk)\n",
+    "                                #print() \n",
     "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
     "                    #print()\n",
     "                if not any(tf_chk):\n",
-    "                    dp[i][j][3] = True\n",
+    "                    dp_new[i][j][3] = True\n",
     "                    for k in range(size-1, -1, -1):\n",
     "                        for l in range(size-1, -1, -1):\n",
     "                            if not(k==0 and l==0):\n",
-    "                                dp[i-k][j-l][0] = 0\n",
+    "                                dp_new[i-k][j-l][0] = 0\n",
     "                else:\n",
-    "                    dp[i][j][0] -= 1\n",
+    "                    dp_new[i][j][0] -= 1\n",
     "\n",
     "                        \n",
     "                        \n",
