--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5: 11}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,20 +727,18 @@
     "                    for l in range(size-1, -1, -1):\n",
     "                        if not dp_new[i-k][j-k][3]:\n",
     "                            sum += 1\n",
-    "                            if not(k==0 and l==0):\n",
-    "                                tf_chk.append(dp[i-k][j-l][3])\n",
-    "                                #print(tf_chk)\n",
-    "                                #print() \n",
+    "                            tf_chk.append(dp[i-k][j-l][3])\n",
+    "                            #print(tf_chk)\n",
+    "                            #print() \n",
     "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
     "                    #print()\n",
     "                if not any(tf_chk):\n",
     "                    dp_new[i][j][3] = True\n",
     "                    for k in range(size-1, -1, -1):\n",
     "                        for l in range(size-1, -1, -1):\n",
-    "                            if not(k==0 and l==0):\n",
+    "                            if not(k==0 and l==0 and not dp_new[i-k][j-l]):\n",
     "                                dp_new[i-k][j-l][0] = 0\n",
-    "                            else:\n",
-    "                                dp_new[i-k][j-l] = dp[i-k][j-1]\n",
+    "\n",
     "                else:\n",
     "                    dp_new[i][j][0] -= 1\n",
     "\n",
