--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
       "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 5 \n"
+      "0 0 0 0 0 0 0 0 0 0 \n"
      ]
     }
    ],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "{5: 11}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +728,7 @@
     "                        if not dp_new[i-k][j-k][3]:\n",
     "                            sum += 1\n",
     "                            tf_chk.append(dp[i-k][j-l][3])\n",
-    "                            #print(tf_chk)\n",
+    "                            print(tf_chk)\n",
     "                            #print() \n",
     "                            #print(f\"size : {size},  i-k : {i-k},  j-l : {j-l},  {dp_new[i-k][j-l][3]}\")\n",
     "                    #print()\n",
