--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -296,11 +296,10 @@
     "                        sum += 1\n",
     "        if sum == size ** 2:\n",
     "            dp_new[i][j][3] = True\n",
-    "                \n",
-    "            \n",
-    "                        \n",
-    "                        \n",
-    "            "
+    "            for k in range(size-1, -1, -1):\n",
+    "                for l in range(size-1, -1, -1):\n",
+    "                    if not(k==0 and l==0):\n",
+    "                        dp_new[i-k][j-l][0] = 0           "
    ]
   },
   {
