--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -281,107 +281,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(i, j) : (0, 0  sum : 24\n",
-      "(i, j) : (0, 1  sum : 24\n",
-      "(i, j) : (0, 2  sum : 24\n",
-      "(i, j) : (0, 3  sum : 24\n",
-      "(i, j) : (0, 4  sum : 24\n",
-      "(i, j) : (0, 5  sum : 24\n",
-      "(i, j) : (0, 6  sum : 24\n",
-      "(i, j) : (0, 7  sum : 24\n",
-      "(i, j) : (0, 8  sum : 24\n",
-      "(i, j) : (0, 9  sum : 24\n",
-      "(i, j) : (1, 0  sum : 24\n",
-      "(i, j) : (1, 1  sum : 24\n",
-      "(i, j) : (1, 2  sum : 24\n",
-      "(i, j) : (1, 3  sum : 24\n",
-      "(i, j) : (1, 4  sum : 24\n",
-      "(i, j) : (1, 5  sum : 24\n",
-      "(i, j) : (1, 6  sum : 24\n",
-      "(i, j) : (1, 7  sum : 24\n",
-      "(i, j) : (1, 8  sum : 24\n",
-      "(i, j) : (1, 9  sum : 24\n",
-      "(i, j) : (2, 0  sum : 24\n",
-      "(i, j) : (2, 1  sum : 24\n",
-      "(i, j) : (2, 2  sum : 24\n",
-      "(i, j) : (2, 3  sum : 24\n",
-      "(i, j) : (2, 4  sum : 24\n",
-      "(i, j) : (2, 5  sum : 24\n",
-      "(i, j) : (2, 6  sum : 24\n",
-      "(i, j) : (2, 7  sum : 24\n",
-      "(i, j) : (2, 8  sum : 24\n",
-      "(i, j) : (2, 9  sum : 24\n",
-      "(i, j) : (3, 0  sum : 24\n",
-      "(i, j) : (3, 1  sum : 24\n",
-      "(i, j) : (3, 2  sum : 24\n",
-      "(i, j) : (3, 3  sum : 24\n",
-      "(i, j) : (3, 4  sum : 24\n",
-      "(i, j) : (3, 5  sum : 24\n",
-      "(i, j) : (3, 6  sum : 24\n",
-      "(i, j) : (3, 7  sum : 24\n",
-      "(i, j) : (3, 8  sum : 24\n",
-      "(i, j) : (3, 9  sum : 24\n",
-      "(i, j) : (4, 0  sum : 24\n",
-      "(i, j) : (4, 1  sum : 24\n",
-      "(i, j) : (4, 2  sum : 24\n",
-      "(i, j) : (4, 3  sum : 24\n",
       "(i, j) : (4, 4  sum : 25\n",
       "(i, j) : (4, 5  sum : 24\n",
       "(i, j) : (4, 6  sum : 24\n",
       "(i, j) : (4, 7  sum : 24\n",
       "(i, j) : (4, 8  sum : 24\n",
       "(i, j) : (4, 9  sum : 25\n",
-      "(i, j) : (5, 0  sum : 25\n",
-      "(i, j) : (5, 1  sum : 25\n",
-      "(i, j) : (5, 2  sum : 25\n",
-      "(i, j) : (5, 3  sum : 25\n",
       "(i, j) : (5, 4  sum : 20\n",
       "(i, j) : (5, 5  sum : 21\n",
-      "(i, j) : (5, 6  sum : 21\n",
-      "(i, j) : (5, 7  sum : 21\n",
-      "(i, j) : (5, 8  sum : 21\n",
-      "(i, j) : (5, 9  sum : 21\n",
-      "(i, j) : (6, 0  sum : 21\n",
-      "(i, j) : (6, 1  sum : 21\n",
-      "(i, j) : (6, 2  sum : 21\n",
-      "(i, j) : (6, 3  sum : 21\n",
       "(i, j) : (6, 4  sum : 20\n",
       "(i, j) : (6, 5  sum : 21\n",
       "(i, j) : (6, 6  sum : 22\n",
       "(i, j) : (6, 7  sum : 23\n",
       "(i, j) : (6, 8  sum : 24\n",
       "(i, j) : (6, 9  sum : 24\n",
-      "(i, j) : (7, 0  sum : 24\n",
-      "(i, j) : (7, 1  sum : 24\n",
-      "(i, j) : (7, 2  sum : 24\n",
-      "(i, j) : (7, 3  sum : 24\n",
       "(i, j) : (7, 4  sum : 20\n",
       "(i, j) : (7, 5  sum : 21\n",
       "(i, j) : (7, 6  sum : 22\n",
       "(i, j) : (7, 7  sum : 23\n",
       "(i, j) : (7, 8  sum : 24\n",
       "(i, j) : (7, 9  sum : 24\n",
-      "(i, j) : (8, 0  sum : 24\n",
-      "(i, j) : (8, 1  sum : 24\n",
-      "(i, j) : (8, 2  sum : 24\n",
-      "(i, j) : (8, 3  sum : 24\n",
       "(i, j) : (8, 4  sum : 20\n",
       "(i, j) : (8, 5  sum : 21\n",
       "(i, j) : (8, 6  sum : 22\n",
       "(i, j) : (8, 7  sum : 23\n",
       "(i, j) : (8, 8  sum : 24\n",
       "(i, j) : (8, 9  sum : 24\n",
-      "(i, j) : (9, 0  sum : 24\n",
-      "(i, j) : (9, 1  sum : 24\n",
-      "(i, j) : (9, 2  sum : 24\n",
-      "(i, j) : (9, 3  sum : 24\n",
       "(i, j) : (9, 4  sum : 21\n",
       "(i, j) : (9, 5  sum : 22\n",
       "(i, j) : (9, 6  sum : 23\n",
@@ -402,12 +334,12 @@
     "                    if not dp_new[i-k][j-l][3]:\n",
     "                        sum += 1\n",
     "            print(f\"(i, j) : ({i}, {j}  sum : {sum}\")\n",
-    "        if sum == size ** 2:\n",
-    "            dp_new[i][j][3] = True\n",
-    "            for k in range(size-1, -1, -1):\n",
-    "                for l in range(size-1, -1, -1):\n",
-    "                    if not(k==0 and l==0):\n",
-    "                        dp_new[i-k][j-l][0] = 0           "
+    "            if sum == size ** 2:\n",
+    "                dp_new[i][j][3] = True\n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not(k==0 and l==0):\n",
+    "                            dp_new[i-k][j-l][0] = 0           "
    ]
   },
   {
@@ -441,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -481,12 +413,12 @@
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
+      "False False False False True False False False False True \n",
+      "True True True True False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n",
-      "False False False False False False False False False False \n"
+      "False False False False False False False False True False \n"
      ]
     }
    ],
