More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -294,32 +294,36 @@
       "(i, j) : (4, 7  sum : 24\n",
       "(i, j) : (4, 8  sum : 24\n",
       "(i, j) : (4, 9  sum : 25\n",
-      "(i, j) : (5, 4  sum : 20\n",
-      "(i, j) : (5, 5  sum : 21\n",
-      "(i, j) : (6, 4  sum : 20\n",
-      "(i, j) : (6, 5  sum : 21\n",
-      "(i, j) : (6, 6  sum : 22\n",
-      "(i, j) : (6, 7  sum : 23\n",
+      "(i, j) : (5, 4  sum : 24\n",
+      "(i, j) : (5, 5  sum : 24\n",
+      "(i, j) : (5, 6  sum : 24\n",
+      "(i, j) : (5, 7  sum : 24\n",
+      "(i, j) : (5, 8  sum : 24\n",
+      "(i, j) : (5, 9  sum : 24\n",
+      "(i, j) : (6, 4  sum : 24\n",
+      "(i, j) : (6, 5  sum : 24\n",
+      "(i, j) : (6, 6  sum : 24\n",
+      "(i, j) : (6, 7  sum : 24\n",
       "(i, j) : (6, 8  sum : 24\n",
       "(i, j) : (6, 9  sum : 24\n",
-      "(i, j) : (7, 4  sum : 20\n",
-      "(i, j) : (7, 5  sum : 21\n",
-      "(i, j) : (7, 6  sum : 22\n",
-      "(i, j) : (7, 7  sum : 23\n",
+      "(i, j) : (7, 4  sum : 24\n",
+      "(i, j) : (7, 5  sum : 24\n",
+      "(i, j) : (7, 6  sum : 24\n",
+      "(i, j) : (7, 7  sum : 24\n",
       "(i, j) : (7, 8  sum : 24\n",
       "(i, j) : (7, 9  sum : 24\n",
-      "(i, j) : (8, 4  sum : 20\n",
-      "(i, j) : (8, 5  sum : 21\n",
-      "(i, j) : (8, 6  sum : 22\n",
-      "(i, j) : (8, 7  sum : 23\n",
+      "(i, j) : (8, 4  sum : 24\n",
+      "(i, j) : (8, 5  sum : 24\n",
+      "(i, j) : (8, 6  sum : 24\n",
+      "(i, j) : (8, 7  sum : 24\n",
       "(i, j) : (8, 8  sum : 24\n",
       "(i, j) : (8, 9  sum : 24\n",
-      "(i, j) : (9, 4  sum : 21\n",
-      "(i, j) : (9, 5  sum : 22\n",
-      "(i, j) : (9, 6  sum : 23\n",
+      "(i, j) : (9, 4  sum : 25\n",
+      "(i, j) : (9, 5  sum : 24\n",
+      "(i, j) : (9, 6  sum : 24\n",
       "(i, j) : (9, 7  sum : 24\n",
-      "(i, j) : (9, 8  sum : 25\n",
-      "(i, j) : (9, 9  sum : 24\n"
+      "(i, j) : (9, 8  sum : 24\n",
+      "(i, j) : (9, 9  sum : 25\n"
      ]
     }
    ],
@@ -344,23 +348,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 1 1 1 1 1 1 1 1 \n",
-      "1 2 2 2 2 2 2 2 2 2 \n",
-      "1 2 3 3 3 3 3 3 3 3 \n",
-      "1 2 3 4 4 4 4 4 4 4 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n",
-      "1 2 3 4 5 5 5 5 5 5 \n"
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n"
      ]
     }
    ],
@@ -373,36 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 0 0 0 0 0 0 \n",
-      "0 0 0 0 5 0 0 0 0 0 \n",
-      "0 0 0 4 0 0 0 0 0 0 \n",
-      "1 2 3 4 0 0 0 0 0 5 \n",
-      "1 2 3 4 0 0 0 0 0 5 \n",
-      "1 2 3 4 0 0 0 0 0 5 \n",
-      "1 2 3 4 0 0 0 0 5 5 \n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(10):\n",
-    "    for j in range(len(dp_new[0])):\n",
-    "        print(dp_new[i][j][0], end=\" \")\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -414,11 +389,11 @@
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False True False False False False True \n",
-      "True True True True False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
       "False False False False False False False False False False \n",
-      "False False False False False False False False True False \n"
+      "False False False False False False False False False False \n",
+      "False False False False True False False False False True \n"
      ]
     }
    ],
