--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -406,10 +406,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5: 4}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_dict = {}\n",
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        if dp_new[i][j][0] > 0:\n",
+    "            if dp_new[i][j][0] not in box_dict:\n",
+    "                box_dict[dp_new[i][j][0]] = 1\n",
+    "            else:\n",
+    "                box_dict[dp_new[i][j][0]] += 1\n",
+    "                \n",
+    "box_dict"
+   ]
   },
   {
    "cell_type": "code",
