More on boj_17136.ipynb

--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
     "                for l in range(size-1, -1, -1):\n",
     "                    if not dp_new[i-k][j-l][3]:\n",
     "                        sum += 1\n",
-    "            print(f\"(i, j) : ({i}, {j}  sum : {sum}\")\n",
+    "            print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
     "            if sum == size ** 2:\n",
     "                dp_new[i][j][3] = True\n",
     "                for k in range(size-1, -1, -1):\n",
@@ -442,31 +442,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(i, j) : (4, 4),  sum : 25\n",
+      "(i, j) : (4, 5),  sum : 5\n",
+      "(i, j) : (4, 6),  sum : 10\n",
+      "(i, j) : (4, 7),  sum : 15\n",
+      "(i, j) : (4, 8),  sum : 20\n",
+      "(i, j) : (4, 9),  sum : 25\n",
+      "(i, j) : (5, 4),  sum : 5\n",
+      "(i, j) : (5, 5),  sum : 5\n",
+      "(i, j) : (5, 6),  sum : 5\n",
+      "(i, j) : (5, 7),  sum : 5\n",
+      "(i, j) : (5, 8),  sum : 5\n",
+      "(i, j) : (5, 9),  sum : 5\n",
+      "(i, j) : (6, 4),  sum : 10\n",
+      "(i, j) : (6, 5),  sum : 10\n",
+      "(i, j) : (6, 6),  sum : 10\n",
+      "(i, j) : (6, 7),  sum : 10\n",
+      "(i, j) : (6, 8),  sum : 10\n",
+      "(i, j) : (6, 9),  sum : 10\n",
+      "(i, j) : (7, 4),  sum : 15\n",
+      "(i, j) : (7, 5),  sum : 15\n",
+      "(i, j) : (7, 6),  sum : 15\n",
+      "(i, j) : (7, 7),  sum : 15\n",
+      "(i, j) : (7, 8),  sum : 15\n",
+      "(i, j) : (7, 9),  sum : 15\n",
+      "(i, j) : (8, 4),  sum : 20\n",
+      "(i, j) : (8, 5),  sum : 20\n",
+      "(i, j) : (8, 6),  sum : 20\n",
+      "(i, j) : (8, 7),  sum : 20\n",
+      "(i, j) : (8, 8),  sum : 20\n",
+      "(i, j) : (8, 9),  sum : 20\n",
+      "(i, j) : (9, 4),  sum : 25\n",
+      "(i, j) : (9, 5),  sum : 5\n",
+      "(i, j) : (9, 6),  sum : 10\n",
+      "(i, j) : (9, 7),  sum : 15\n",
+      "(i, j) : (9, 8),  sum : 20\n",
+      "(i, j) : (9, 9),  sum : 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "size = 5\n",
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        if dp_new[i][j][0] == size and not dp_new[i][j][3]:\n",
+    "            sum = 0\n",
+    "            for k in range(size-1, -1, -1):\n",
+    "                for l in range(size-1, -1, -1):\n",
+    "                    if not dp_new[i-k][j-l][3] and dp_new[i-k][j-l][0] != 0:\n",
+    "                        sum += 1\n",
+    "            print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
+    "            if sum == size ** 2:\n",
+    "                dp_new[i][j][3] = True\n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not(k==0 and l==0):\n",
+    "                            dp_new[i-k][j-l][0] = 0           "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False True False False False False True \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False False False False False False False \n",
+      "False False False False True False False False False True \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][3], end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{5: 4}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "box_dict = {}\n",
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        if dp_new[i][j][0] > 0:\n",
+    "            if dp_new[i][j][0] not in box_dict:\n",
+    "                box_dict[dp_new[i][j][0]] = 1\n",
+    "            else:\n",
+    "                box_dict[dp_new[i][j][0]] += 1\n",
+    "                \n",
+    "box_dict"
+   ]
   },
   {
    "cell_type": "code",
