--- a/boj_17136.ipynb
+++ b/boj_17136.ipynb
@@ -603,24 +603,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "size = 5\n",
+    "\n",
+    "while size >= 1:\n",
+    "    for i in range(10):\n",
+    "        for j in range(len(dp_new[0])):\n",
+    "            if dp_new[i][j][0] == size and not dp_new[i][j][3]:\n",
+    "                sum = 0\n",
+    "                for k in range(size-1, -1, -1):\n",
+    "                    for l in range(size-1, -1, -1):\n",
+    "                        if not dp_new[i-k][j-l][3] and dp_new[i-k][j-l][0] != 0:\n",
+    "                            sum += 1\n",
+    "                print(f\"(i, j) : ({i}, {j}),  sum : {sum}\")\n",
+    "                if sum == size ** 2:\n",
+    "                    dp_new[i][j][3] = True\n",
+    "                    for k in range(size-1, -1, -1):\n",
+    "                        for l in range(size-1, -1, -1):\n",
+    "                            if not(k==0 and l==0):\n",
+    "                                dp_new[i-k][j-l][0] = 0\n",
+    "    size -= 1    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 0 0 0 0 0 0 \n",
+      "0 0 0 0 5 0 0 0 0 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    for j in range(len(dp_new[0])):\n",
+    "        print(dp_new[i][j][0], end=\" \")\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
